[package]
name = "frinZsearch"
version = "1.0.0"
authors = ["Masanori Akimoto"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/M-AKIMOTOO/frinZsearch"
homepage = "..."
documentation = "..."
readme = "README.md"
categories = ["algorithms"]
keywords = ["fringe"]

[[bin]]
name = "frinZsearch" # 実行可能ファイルの名前
path = "src/rust/frinZmain.rs" # main 関数が書かれているファイルのパス


[dependencies]
byteorder = "1.5.0"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
num-complex = "0.4.6"
rustfft = "6.4.0"

[dev-dependencies]
tempfile = "3.20.0"

