[package]
name = "frinZsearch"
version = "1.0.0"
authors = ["Masanori AKIMOTO"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/M-AKIMOTOO/frinZsearch"
homepage = "..."
documentation = "..."
readme = "README.md"
categories = ["algorithms"]
keywords = ["fringe"]

[[bin]]
name = "frinZsearch"
path = "src/rust/frinZmain.rs"

[[bin]]
name = "frinZrawvis"
path = "src/rust/frinz_output.rs"


[dependencies]
byteorder = "1.5.0"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
num-complex = "0.4.6"
rustfft = "6.4.0"
plotters = { version = "0.3.7", features = ["full_palette"] }


[dev-dependencies]
tempfile = "3.20.0"

